--- a/keras-rl/Cart_Pole.ipynb
+++ b/keras-rl/Cart_Pole.ipynb
@@ -131,12 +131,12 @@
    "source": [
     "## 4. Create your learning agent\n",
     "\n",
-    "Now, configure and compile your agent. The memory is set to Sequential Memory, storing the result of performed actions and obtained rewards. Try using different types of action-selection policies, memory sizes, learning rates, training steps, or w/e you can think of. Settings you can tune:\n",
+    "Now, configure and compile your agent. The memory is set to Sequential Memory, storing the result of performed actions and obtained rewards. Settings you can tune:\n",
     "\n",
     "* **policy**: the way in which actions are selected over time, following some balancing method. This RL-concept is very important, incorporating a trade-off between exploring unknown parts of the environment, and exploiting known information. (possible policies: EpsGreedyQPolicy, LinearAnnealedPolicy, SoftmaxPolicy, GreedyQPolicy, BoltzmannQPolicy, MaxBoltzmannQPolicy, BoltzmannGumbelQPolicy)\n",
     "* **memory limit**: the number of previous actions+rewards that are taken into account while learning, at a certain moment in time.\n",
-    "* **window_length**: actually not sure... just keep it at 1 to avoid errors ;)\n",
-    "* **target_model_update**: in theory denoted by $\\alpha$, the network's learning rate. It determines how quickly the algorithm wants to converge to found target values (such as Q-values)."
+    "* **window_length**: actually not sure... just keep it at 1 to avoid errors (or see it as a challenge to find out ;))\n",
+    "* **target_model_update**: in RL-theory denoted by $\\alpha$, the network's learning rate. It determines how quickly the algorithm wants to converge to found target values (such as Q-values)."
    ]
   },
   {
@@ -160,7 +160,6 @@
     "\n",
     "* **nb_steps**: the larger, the more time your bot gets for trying to find a good strategy, but the longer you'll have to wait.\n",
     "* **verbose**: printing running status. 0 for no logging, 1 for interval logging, 2 for episode logging\n",
-    "* **visualize**: you can visualize the training for show, but this mostly slows down training\n",
     "* **log_interval**: if verbose=1, the number of steps that are considered to be an interval"
    ]
   },
@@ -170,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dqn.fit(env, nb_steps=1000, verbose=1, visualize=False, log_interval=10)"
+    "dqn.fit(env, nb_steps=1000, verbose=1, log_interval=10)"
    ]
   },
   {
@@ -178,9 +177,7 @@
    "metadata": {},
    "source": [
     "## 6. How well do you perform?\n",
-    "Run the below code to test your DRL model. The larger the reward and number of steps per episode, the better your model performs. Running about 10 episodes will give you a proper overall status.\n",
-    "\n",
-    "**NOTE:** Don't close the graph after/while running it. This will reset the kernel and cause you having to re-run everything. You can simply re-run the below code instead, each time."
+    "Run the below code to test your DRL model. The larger the reward and number of steps per episode, the better your model performs. Running about 10 episodes will give you a proper overall status. Unfortunately, visualization only works when running locally."
    ]
   },
   {
@@ -189,7 +186,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dqn.test(env, nb_episodes=10, visualize=True)"
+    "dqn.test(env, nb_episodes=10, visualize=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Happy?\n",
+    "If you are happy with your performance, save your model! Send it to lennart@pipple.nl, so it can be publicly evaluated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "object_pkl = model\n",
+    "file_pkl = open('model_[enter_team_name].obj', 'wb')\n",
+    "pickle.dump(object_pkl, file_pkl)"
    ]
   }
  ],
